pkg/lang/testdata/ub/stack-values/valid/factory-pin.ub
factory: {
  pin: {
    library-path: 'github.com/me/lib//web'
    supported-versions: [
      { version: 'v1.2.3', content-revision: 'abc123' },
    ]
  }
  inputs: { name: 'world' }
}
