pkg/lang/testdata/ub/stack-values/invalid/pin-duplicate-key.ub
factory: {
  pin: {
    supported-versions: []
    supported-versions: []
  }
}
